修改：      .gitignore 	新文件：    _plugins/thumb.rb 	修改：      _posts/2013-10-18-github-homepage-tutorial.md 	新文件：    _posts/2013-11-07-arch-install.md 	删除：      assets/img/album/flute/Makefile 	删除：      assets/img/album/landscape/Makefile 	类型变更：  assets/img/album/makefile 	重命名：    assets/img/album/makefile -> assets/img/album/makefile.all 	修改：      assets/img/album/makefile.subfolder 	删除：      assets/img/album/me/Makefile 	删除：      assets/img/album/me/file/_DSC0007.JPG 	删除：      assets/img/album/me/file/_DSC0151.JPG 	删除：      assets/img/album/me/thumb/_DSC0007.JPG 	删除：      assets/img/album/me/thumb/_DSC0151.JPG 	删除：      assets/img/album/pku/Makefile

--- a/assets/img/album/makefile.subfolder
+++ b/assets/img/album/makefile.subfolder
@@ -3,7 +3,7 @@ items := $(shell ls *.* | grep -E '*.[j][pP][gG]|*.[J][pP][gG]')
 files := $(addprefix file/,$(items))
 thumbs := $(addprefix thumb/,$(items))
 
-all: $(files) $(thumbs) list
+all: $(files) $(thumbs) list clean
 
 # generate files for web
 $(files): file/%: %
@@ -24,7 +24,12 @@ list:
 	for item in $(items);do\
 		echo -e '\t- '$$item >> list.yml;\
 	done;\
+	cat list.yml
 
 clean:
+	ls thumb | grep -E '*.*' | grep -x -v "`ls *.*`" | xargs -l -i rm thumb/{};\
+	ls file | grep -E '*.*' | grep -x -v "`ls *.*`" | xargs -l -i rm file/{}
+
+clean-all:
 	-rm -rf file thumb list.yml
 
