--- a/assets/img/album/me/list.yml
+++ b/assets/img/album/me/list.yml
@@ -1,1 +1,16 @@
 imgs:
+	- 1.jpg
+	- 2.jpg
+	- 80ee51eb-535e-43b2-b180-428c5abaeff6_800x600.jpg
+	- IMG_0276.JPG
+	- IMG_0389.JPG
+	- IMG_0751.JPG
+	- IMG_0773.JPG
+	- IMG_0813.JPG
+	- IMG_0891.JPG
+	- IMG_4891.JPG
+	- IMG_4925.JPG
+	- IMG_5713.JPG
+	- IMG_6544.JPG
+	- IMG_9136_ed.JPG
+	- IMG_9143.JPG
